# VersionControlSystem

./: .gitignore  CMakeLists.txt
code/: App.cpp  App.h  main.cpp
code/Exceptions/: InvalidArgumentException.cpp  InvalidArgumentException.h
code/Files/: File.cpp  File.h
code/Utils/: Crypto.cpp  Crypto.h
